fix all z-indexs

--- a/src/components/CardStack/CardStack.module.scss
+++ b/src/components/CardStack/CardStack.module.scss
@@ -15,7 +15,7 @@
 }
 
 .BoxContainerNoMainStack {
-    z-index: 9999;
+    z-index: 3;
 
     margin-top: 2rem;
     font-family: 'Work Sans', sans-serif;
