--- a/src/components/CustomMouse/Mouse.module.scss
+++ b/src/components/CustomMouse/Mouse.module.scss
@@ -7,5 +7,5 @@
     top: 0;
     left: 0;
     pointer-events: none;
-    z-index: 2;
+    z-index: 4;
 }
