--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -196,7 +196,7 @@
     align-items: top;
     justify-content: space-between;
 
-    z-index: 9999;
+    z-index: 3;
 
     background-color: white;
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.09);
